# flake8-eol

./: setup.cfg  setup.py
tests/: flake8_eol_test.py
