[metadata]
name = "flake8-eol
version = 0.0.1
description = Flake8 plugin to enforce EOL consistency
long_description = file: README.md
keywords = flake8, eol, line endings
author = Claudio Scheer
author_email = claudioscheer@protonmail.com
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Quality Assurance
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    = src
install_requires =
    flake8

[options.packages.find]
where = src
